# Lessons

./: .gitignore  .gitmodules  README.md
Hydra/: basic_operations.py
Hydra/configs/: train_config.yaml
OpenCV/ch3_core_operations/: core_operations.py
YOLO/YOLO_Tutorial/: README.md  README_CN.md  demo.py  engine.py  environment.yml  train.py
YOLO/YOLO_Tutorial/dataset/: coco.py  ourdataset.py
YOLO/YOLO_Tutorial/evaluator/: coco_evaluator.py  ourdataset_evaluator.py  voc_evaluator.py
[Datawhale] FastAPI/: README.md
[Datawhale] FastAPI/md版本/: 第01课-路径参数.md  第02课-查询参数.md
[Datawhale] FastAPI/第1章-url参数/: 第1.1节-路径参数.ipynb  第1.2节-查询参数.ipynb  第1.3节-路径参数校验.ipynb  第1.4节-查询参数校验.ipynb
[深蓝]足式机器人运动控制/ch3_kinematic/: 四足机器人运动学&逆运动学作业.md
[深蓝]足式机器人运动控制/ch3_kinematic/leggedRobotics/: README.md  kinematic.py  lite3_config.py
[深蓝]足式机器人运动控制/ch4_插值与规划/chapter4_homework/: interpolation.py  lite3_config.py
[深蓝]足式机器人运动控制/ch5 状态估计/chapter5_homework/: config.py  kalman_filter.py
[深蓝]足式机器人运动控制/ch7_虚拟模型控制VMC/virtual_model_control/: CMakeLists.txt
[深蓝]运动规划/ch12 MPC/mpc-car/: README.md
[深蓝]运动规划/ch5 轨迹生成/ros/: README.md
[深蓝]运动规划/ch6 软硬约束轨迹规划/matlab/: getAbeq.m  getAbieq.m  hw6.m
[深蓝]运动规划/ch8 MPC/: home_work.m  linear_mpc.m
fiftyone-usage/: fo1.ipynb
深蓝_移动机器人运动规划/ch6 软硬约束轨迹规划/matlab/: getM.m  getQM.m
深蓝_足式机器人运动控制/ch4_插值与规划/: 四足机器人足端轨迹插值作业.md
深蓝_足式机器人运动控制/ch7_虚拟模型控制VMC/: README.md
深蓝足式机器人运动控制/ch7_虚拟模型控制VMC/: README.md
编译原理/CMake基础/: CMakeLists.txt  README.md
编译原理/CMake基础/include/: Solution.h
编译原理/CMake基础/src/: Solution.cpp  main.cpp
(+43 files in other folders)
